--- a/backend/.env
+++ b/backend/.env
@@ -3,9 +3,9 @@ MYSQL_DB_NAME=proyecto
 MYSQL_USER=root
 MYSQL_PASSWORD=
 
-CLOUDINARY_URL=cloudinary://951477975294611:tMfgwvdtR2UkIkh3HlrS_X8_22I@deitsnpu4
+CLOUDINARY_URL=
 
-SMTP_HOST=sandbox.smtp.mailtrap.io
-SMTP_PORT=2525
-SMTP_USER=fc044f9aea6de4
-SMTP_PASS=9f1f15e3a8d74a
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USER=
+SMTP_PASS=
