--- a/backend/.env
+++ b/backend/.env
@@ -1,11 +1,11 @@
 MYSQL_HOST=localhost
-MYSQL_DB_NAME=proyecto
+MYSQL_DB_NAME=proyectoseptiembre
 MYSQL_USER=root
 MYSQL_PASSWORD=
 
-CLOUDINARY_URL=
+CLOUDINARY_URL=cloudinary://321678242422199:TM8TR2DO_STxmoqAdNTdz5nIyrI@dcjm9pz1u
 
-SMTP_HOST=
-SMTP_PORT=
-SMTP_USER=
-SMTP_PASS=
+SMTP_HOST=sandbox.smtp.mailtrap.io
+SMTP_PORT=2525
+SMTP_USER=47505cde13ba59
+SMTP_PASS=d338476e4e6918
